fixed img grid on mobile

--- a/scss/_single-project.scss
+++ b/scss/_single-project.scss
@@ -87,6 +87,8 @@
 			align-items: center;
 
 			img {
+				max-height: 999px;
+				
 				@include mediumScreen {
 					max-height: 300px;
 				}
